--- a/src/scss/resources.scss
+++ b/src/scss/resources.scss
@@ -4,6 +4,15 @@ section-row {
     background-color: $body-color;
 }
 
+section-container {
+    @include make-container();
+    display: flex;
+}
+
+.container {
+    width: 50%;
+}
+
 @include media-breakpoint-down(md) {
     section-row {
         height: 100px;
