update modal sample

--- a/src/scripts/components/modalSample/modalSample.html
+++ b/src/scripts/components/modalSample/modalSample.html
@@ -13,7 +13,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <h1>Hello from Modal</h1>
+                    <create-request></create-request>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-secondary btn-no-outline" data-dismiss="modal">
