--- a/src/scripts/components/createRequest.html
+++ b/src/scripts/components/createRequest.html
@@ -3,7 +3,7 @@
         <div class="col-12">
             <h2>isActive <span data-bind="text: isActive"></span></h2>
             <h1>publish title <span data-bind="text: title"></span></h1>
-            <button class="btn btn-primary" data-bind="click: update">Update From Component</button>
+            <button class="btn btn-primary my-3" data-bind="click: update">Update From Component</button>
         </div>
     </div>
 </div>
